tests/routes/snapshots/integration_tests__routes__api__create_asset.snap
---
source: tests/routes/api.rs
expression: new_asset
---
{
  "id": 1,
  "name": "Bitcoin",
  "unit_value": 10.0,
  "updated_at": "[datetime]"
}
