tests/routes/snapshots/integration_tests__routes__api__list_assets.snap
---
source: tests/routes/api.rs
expression: assets
---
[
  {
    "id": 1,
    "name": "Bitcoin",
    "unit_value": 10.0
  }
]
