tests/routes/snapshots/integration_tests__routes__api__update_asset.snap
---
source: tests/routes/api.rs
expression: update_asset
---
{
  "id": 1,
  "name": "Ethereum",
  "unit_value": 20.0,
  "updated_at": "[datetime]"
}
