tests/routes/snapshots/integration_tests__routes__api__update_asset_no_fields_keeps_values.snap
---
source: tests/routes/api.rs
expression: updated
---
{
  "id": 1,
  "name": "Bitcoin",
  "unit_value": 10.0
}
