tests/routes/snapshots/integration_tests__routes__api__update_asset_partial_name_only.snap
---
source: tests/routes/api.rs
expression: updated
---
{
  "id": 1,
  "name": "Litecoin",
  "unit_value": 10.0
}
