tests/routes/snapshots/integration_tests__routes__api__update_asset_partial_value_only.snap
---
source: tests/routes/api.rs
expression: updated
---
{
  "id": 1,
  "name": "Bitcoin",
  "unit_value": 42.0,
  "updated_at": "[datetime]"
}
